Make the node dependencies dependencies instead of devDependencies. This package is for development only so we want the dependencies every time this package is installed.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "slickgrid-bootstrap-dev",
     "version": "0.1.0",
-    "devDependencies": {
+    "dependencies": {
         "yo": "*",
         "grunt-cli": "*",
         "bower": "*",
