Create an example/dist folder that holds a static copy of only the needed resources from the components. I include it because I find this the best way to allow the examples functional from the static repository (gh-pages) without the need to build them, while at the same time the components directory structure is preserved, keeping the example followable.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "bower": "*",
         "grunt": ">=0.4",
         "grunt-contrib-jshint": "*",
+        "grunt-contrib-copy": "*",
         "grunt-contrib-uglify": "*",
         "grunt-contrib-concat": "*",
         "grunt-contrib-less": "*",
