--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: node_js
 node_js:
   - 0.10
-  - 0.8
-  - 0.6
 notifications:
   irc: "irc.freenode.org#greenfinity"
 before_script:
@@ -15,3 +13,5 @@ before_script:
   - "phantomjs ./node_modules/buster/script/phantom.js &"
   - "sleep 3"
   - "echo 'Done.'"
+script:
+  - "./node_modules/buster/bin/buster-test"
