--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
   - "bower install"
   - "export DISPLAY=:99:0"
   - "echo 'Starting buster server'"
-  - "./node_modules/buster/bin/buster-server &"
+  - "buster-server &"
   - "sleep 3"
   - "echo 'Done.'"
   - "echo 'Starting phantomjs server'"
