--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 notifications:
   irc: "irc.freenode.org#greenfinity"
 before_script:
-  - export PATH="$PWD/node_modules/.bin:$PATH
+  - export PATH="$PWD/node_modules/.bin:$PATH"
   - bower install
   - export DISPLAY=:99:0
   - echo 'Starting buster server...'
