--- a/.travis.yml
+++ b/.travis.yml
@@ -9,15 +9,19 @@ before_script:
   - export DISPLAY=:99:0
   - echo 'Starting buster server...'
   - buster-server &
+  - sleep 5
+  - echo 'Done.'
   - echo 'Starting xvfb for FF...'
   - sh -e /etc/init.d/xvfb start
   - sleep 5
-  - echo 'Done buster + xvfb.'
+  - echo 'Done.'
   - echo 'Starting phantomjs browser...'
   - phantomjs ./node_modules/buster/script/phantom.js &
+  - echo 'Done.'
+  - sleep 5
   - echo 'Starting firefox browser...'
   - firefox http://localhost:1111/capture &
   - sleep 5
-  - echo 'Done phantomjs + firefox.'
+  - echo 'Done.'
 script:
   - ./node_modules/buster/bin/buster-test
