Add travis badge to readme.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,11 @@ node_js:
   - 0.10
 notifications:
   irc: irc.freenode.org#greenfinity
-before_script:
+install:
   - export PATH="$PWD/node_modules/.bin:$PATH"
-  - bower install
   - export DISPLAY=:99.0
+  - bower install
+before_script:
   - echo 'Starting buster server...'
   - buster server &
   - sleep 5
